opam-version: "2.0"
version: "0.1"
synopsis: ""
description: ""
maintainer: ["steenuil <steen@neets.work>"]
authors: ["steenuil <steen@neets.work>"]
license: "ISC"
depends: [
  "dune" {>= "3.6"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

